Deployment/yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pzone-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:940168446867:certificate/c2ccb9b7-3cc1-4b0f-9765-d301ead831a8
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /map
          pathType: Prefix
          backend:
            service:
              name: imsi-svc
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test2-ws-svc
              port:
                number: 80
